Fix for #1657: use `ClassNode#hasClass` to determine binary or source